# pyteal-test-template

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  common.py  docker-compose.yml  pyproject.toml
devnet/: Dockerfile  devnet.json  network.json  run.sh
devnet/primary/: algod.admin.token  algod.token  config.json  genesis.json
devnet/primary/devnet-v1/: Wallet1.0.3000000.partkey  Wallet1.rootkey
devnet/primary/goal.cache/: walletHandles.json
devnet/primary/kmd-v0.5/: kmd.token
devnet/primary/kmd-v0.5/sqlite_wallets/: unencrypted-default-wallet.e32e2093447d255a951ac4f5bf055a7a.db
tests/: conftest.py  constants.py  example_test.py  utils.py
